--- a/RocketProcess.Razor/Pages/Login/_Login.razor
+++ b/RocketProcess.Razor/Pages/Login/_Login.razor
@@ -40,7 +40,7 @@
         }
         else if (loginResponse.StatusCode == HttpStatusCode.Unauthorized)
         {
-            await js.InvokeVoidAsync("alert", "Invalid User Name or Password");
+            await js.InvokeVoidAsync("alert", "Correo o Contraseña invalido");
             return;
         }
     }
