--- a/RocketProcess.Razor/Pages/Index.razor
+++ b/RocketProcess.Razor/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <h1>Hola, @context.User.Identity.Name!</h1>
+        @*<h1>Hola, @context.User.Identity.Name!</h1>*@
         <Inicio></Inicio>
     </Authorized>
     <NotAuthorized>
