--- a/RocketProcess.Razor/Pages/Inicio.razor
+++ b/RocketProcess.Razor/Pages/Inicio.razor
@@ -1,15 +1,73 @@
-﻿@inject NavigationManager nm
+﻿@using RocketProcess.Shared.Modelos.ModelFlujo
+@using RocketProcess.Shared.Modelos.ModelTarea
+@inject NavigationManager nm
+@inject IFlujosServices FlujosServices
+@inject ITareasServices TareasServices
+@inject IEstadoServices EstadoServices
 
 <PageTitle>Portafolio Jesús Torrejón</PageTitle>
 
-<h1>Rocket Process</h1>
-<span>Endpoints de WebApi</span>
-<button class="btn btn-primary" @onclick="Navegar">Redireccioname</button>
+<h1>Dashboard</h1>
+
+<MudCard Outlined="true">
+    <MudChart ChartType="ChartType.Bar" ChartSeries="@Series" XAxisLabels="@XAxisLabels" Width="100%" Height="350px">
+        <CustomGraphics>
+            <style>
+                .heavy {
+                    font: bold 30px Helvetica;
+                }
+
+                .Rrrrr {
+                    font: italic 40px Helvetica;
+                    fill: rgb(62,44,221);
+                }
+            </style>
+            <text x="80" y="35" class="heavy">Flujos</text>
+            <text x="105" y="70" class="Rrrrr"></text>
+        </CustomGraphics>
+    </MudChart>
+</MudCard>
+
+
+<MudCard Outlined="true">
+	<MudChart ChartType="ChartType.Donut" Width="300px" Height="300px" InputData="@data" InputLabels="@labels">
+	<CustomGraphics>
+		<text class="donut-inner-text" x="47%" y="35%" dominant-baseline="middle" text-anchor="middle" fill="black" font-family="Helvetica" font-size="2">Total</text>
+		<text class="donut-inner-text" x="47%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="black" font-family="Helvetica" font-size="5">@data.Sum().ToString()</text>
+	</CustomGraphics>
+</MudChart>
+</MudCard>
+
+<div class="mt-3 mb-3">
+    <span>Endpoints de WebApi</span>
+    <button class="btn btn-primary ml-3" @onclick="Navegar">Redireccioname</button>
+</div>
+
 
 @code {
 
-    public void Navegar()
+	IEnumerable<FlujoDetalle> EnumFlujos;
+	IEnumerable<TareaDetalle> EnumTareas;
+
+	public double[] data = { 25, 77, 28, 5, 30, 6, 18 };
+    public string[] labels = { "Terminada", "Fallida", "Corregida", "Rechazada", "Asignada", "Aceptada", "Atrasada" };
+
+    public List<ChartSeries> Series = new List<ChartSeries>()
     {
+        new ChartSeries() { Name = "FLUJO1", Data = new double[] { 40, 20, 25, 27, 46, 60, 48, 80, 15 } },
+        new ChartSeries() { Name = "FLUJO2", Data = new double[] { 19, 24, 35, 13, 28, 15, 13, 16, 31 } },
+        new ChartSeries() { Name = "FLUJO3", Data = new double[] { 8, 6, 11, 13, 4, 16, 10, 16, 18 } },
+    };
+    public string[] XAxisLabels = { "Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep" };
+
+    protected override async Task OnInitializedAsync()
+	{
+		//EnumFlujos = await FlujosServices.ObtenerFlujos();
+		//EnumTareas = await TareasServices.GetAllDetalle();
+	}
+
+	public void Navegar()
+	{
         nm.NavigateTo("swagger/index.html", true);
     }
 }
